Configure Android project

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+      <meta-data android:name="com.reactnativeramp.ApplicationId" android:value="YourApplicationId"/>
+      <meta-data android:name="com.reactnativeramp.EnvironmentId" android:value="YourEnvironmentId"/>
+      <meta-data android:name="com.reactnativeramp.Apikey" android:value="YourAPIKey"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
