Configure iOS project

--- a/ios/ReactNativeRampExample/Info.plist
+++ b/ios/ReactNativeRampExample/Info.plist
@@ -51,5 +51,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>RampApplicationId</key>
+	<string>YourApplicationId</string>
+	<key>RampEnvironmentId</key>
+	<string>YourEnvironmentId</string>
+	<key>RampApikey</key>
+	<string>YourAPIKey</string>
 </dict>
 </plist>
